fix squishy aspect ratio bug

--- a/app/style.css
+++ b/app/style.css
@@ -36,7 +36,7 @@ body{
 }
 
 img{
-    width: auto;
+    width: auto !important;
     height: 100% !important;
 }
 
